# Lab8

./: app.py  data_07.csv  pyproject.toml  test.py
