[project]
name = "lab8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.4.1",
    "data-07-csv",
    "geopandas>=1.0.1",
    "icecream>=2.1.3",
    "polars>=1.14.0",
    "streamlit>=1.40.1",
    "test-py>=0.3",
    "vega-datasets>=0.9.0",
]
